force-app/main/default/objects/Enrollment__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <label>Actual End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>