force-app/main/default/objects/Enrollment__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <referenceTo>Course_Information__c</referenceTo>
    <relationshipLabel>Accounts details</relationshipLabel>
    <relationshipName>Enrollments1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>