force-app/main/default/objects/Enrollment__c/fields/enroll_mail__c.field-meta.xml
<CustomField>
    <fullName>enroll_mail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>enroll mail</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>