force-app/main/default/objects/Enrollment__c/fields/Preferred_Mode__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Mode__c</fullName>
    <label>Preferred Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>